# adya_mcp_hackathon

./: .gitignore  SUBMISSION_SUMMARY.md  package.json
docker_integrations/athena/: Dockerfile  docker-compose.yml
mcp_servers/js/servers/aws_athena_mcp/: package.json
mcp_servers/js/servers/aws_athena_mcp/src/: index.ts
mcp_servers/js/servers/h2o_ai_mcp/: README.md  package.json
mcp_servers/js/servers/h2o_ai_mcp/src/: index.ts
mcp_servers/js/servers/optional_github_mcp/: package.json
mcp_servers/js/servers/optional_github_mcp/src/: index.ts
mcp_servers/js/servers/plaid_client/: README.md
mcp_servers/js/servers/square_mcp/: README.md  package.json
mcp_servers/js/servers/square_mcp/src/: index.ts
mcp_servers/python/: setup_all.py
mcp_servers/python/aws_athena_mcp/: main.py
mcp_servers/python/github_mcp/: main.py
mcp_servers/python/h2o_ai_mcp/: main.py
mcp_servers/python/plaid_client/: main.py
mcp_servers/python/square_mcp/: main.py  pyproject.toml  requirements.txt
mcp_servers_documentation/AWS_ATHENA_MCP/: credentials.md  demo_videos.md  server_features.md
mcp_servers_documentation/GITHUB_MCP/: credentials.md  demo_videos.md  server_features.md
mcp_servers_documentation/H2O_AI_MCP/: credentials.md  demo_videos.md  server_features.md
mcp_servers_documentation/PLAID_MCP/: credentials.md  demo_videos.md  server_features.md
mcp_servers_documentation/SQUARE_MCP/: credentials.md  demo_videos.md  server_features.md
