[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "square-mcp-enhanced"
version = "1.0.0"
description = "Enhanced Square MCP Server with custom analytics - Team 28 Code Paglus"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "aiohttp>=3.9.0",
    "pydantic>=2.5.0"
]

[project.scripts]
square-mcp = "main:main"

[tool.hatch.build.targets.wheel]
packages = ["."]
